# example-datasets

./: .gitignore  README.md
.github/scripts/: sync_issues.py  validate_datasets.py
.github/workflows/: validate-datasets.yaml
Cerro_Hoya_Expedition/Hoya_408m_calmoBarbo_2025-01-26/2025-01-27/: calmoBarbo_2025_01_27__19_11_06_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_12_06_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_13_06_HDR0_identified.json.2.crswap  calmoBarbo_2025_01_27__19_14_06_HDR0_identified.json.2.crswap  calmoBarbo_2025_01_27__19_15_22_HDR0_identified.json.2.crswap  calmoBarbo_2025_01_27__19_16_06_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_17_05_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_18_06_HDR0_identified.json.2.crswap  calmoBarbo_2025_01_27__19_19_06_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_20_06_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_21_05_HDR0_identified.json.2.crswap  calmoBarbo_2025_01_27__19_22_22_HDR0_identified.json.3.crswap  calmoBarbo_2025_01_27__19_23_06_HDR0_identified.json.2.crswap  calmoBarbo_2025_01_27__19_24_05_HDR0_identified.json.2.crswap  (+137 more)
datasets/Mothbox/: README.md  datapackage.json
datasets/Mothbox/raw-data/: mothbot_metadata.csv
datasets/amber/: Field mapping from raw data to Camtrap DP.xlsx  README.md  deployments.csv
datasets/antenna/: README.md  datapackage.json  deployments.csv  media.csv  observations.csv
datasets/diopsis/: README.md  deployments.csv  media.csv  observations.csv
datasets/flatbug/: README.md
datasets/flower_visitors/: README.md  datapackage.json  deployments.csv  media.csv  observations.csv
datasets/ias/: README.md  datapackage.json  deployments.csv  media.csv  observations.csv
datasets/ias/code/: README.md  main.ipynb  mapping.csv  prepare.ipynb  pyproject.toml
datasets/ias/code/src/ias_stand/: datapackage.py  tables.py
datasets/ias/code/templates/: datapackage.json
datasets/insect-detect/: README.md
datasets/lepmon/: README.md  Readme.md
datasets/plant-pollinator-interactions/: README.md  datapackage.json  deployments.csv
datasets/rangex/: README.md  datapackage.json
(+21 files in other folders)
