[project]
name = "insectai-ias-example"
version = "0.2.0"
description = "ias example dataset for datathon at InsectAI's 2026 annual meeting in Niš, Serbia"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "frictionless",
    "PyYAML",
    "ipywidgets",
    "tqdm",
]
